--- a/src/components/organisms/DistributionGraph/index.scss
+++ b/src/components/organisms/DistributionGraph/index.scss
@@ -24,7 +24,7 @@
     color: white;
     font-weight: 500;
     text-align: center;
-    padding: 0.5rem;
+    padding: 0.4rem;
 }
 
 .tooltip-list-item {
